--- a/index.html
+++ b/index.html
@@ -5,18 +5,34 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>MR Valentines</title>
-  <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
   <script src="https://rawgit.com/feiss/aframe-environment-component/master/dist/aframe-environment-component.min.js"></script>
-  
-</head>
+  <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
+<script>
+  AFRAME.registerComponent('change-color-on-hover', {
+    schema: {
+      color: {default: 'red'}
+    },
+
+    init: function () {
+      var data = this.data;
+      var el = this.el;  // <a-box>
+      var defaultColor = el.getAttribute('material').color;
+
+      el.addEventListener('mouseenter', function () {
+        el.setAttribute('color', data.color);
+      });
+
+      el.addEventListener('mouseleave', function () {
+        el.setAttribute('color', defaultColor);
+      });
+    }
+  });
+</script>
 <body>
-  <script> 
-    var playthisvid_1 = document.querySelector('#playbutton_1');
-    playthisvid_1.addEventListener('click', () => { console.log("it clicks");  })
-  </script>
   <a-scene>
-    <a id="playbutton_1" href="#">Test</a>
-    <a-camera></a-camera>
+    <a-box color="#EF2D5E" position="0 1 -4" change-color-on-hover="color: blue"></a-box>
+
+    <a-camera><a-cursor></a-cursor></a-camera>
   </a-scene>
 </body>
-</html>
+  </html>
